--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <footer class="footer">
         <p class="legal">Not associated with OpenAI in any way. ChatGPT is a product of OpenAI.</p>
-        <p class="credit">2010–2025 – Made with light sarcasm.</p>
+        <p class="credit">Vibe-coded with love.</p>
       </footer>
     </main>
 
